# Asteroids

./: .clang-format  .gitignore  Asteroid.cpp  Asteroid.h  CMakeLists.txt  Explosion.h  PhaserBlast.cpp  PhaserBlast.h  Player.cpp  Player.h  README.md  RenderableEntity.cpp  RenderableEntity.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  pre-commit.sh  renderer.cpp
src/: Asteroid.cpp  Asteroid.h  Controller.cpp  Controller.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  MessageQueue.cpp  MessageQueue.h  PhaserBlast.cpp  PhaserBlast.h  Player.cpp  Player.h  RandomNumberBetween.cpp  RandomNumberBetween.h  RenderableEntity.cpp  RenderableEntity.h  Renderer.cpp  Renderer.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  util.h
